# RoutingBlocks

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: conda.yml  pip.yml  wheels.yml
RoutingBlocks/: __init__.py
RoutingBlocks/operators/: __init__.py  best_insert.py  move_selectors.py  related_removal.py  route_removal.py  worst_removal.py
bindings/: CMakeLists.txt  stubgen.py
bindings/include/routingblocks_bindings/: Evaluation.h  Instance.hpp  Labeling.h  LocalSearch.h  Operators.h  Solution.h  binding_helpers.hpp  large_neighborhood.h  utility.h
bindings/include/routingblocks_bindings/specializations/: ADPTW.h  NIFTW.h
bindings/include/vrpis_bindings/: Evaluation.h  Instance.hpp  Labeling.h  LocalSearch.h  Operators.h  Solution.h  binding_helpers.hpp  large_neighborhood.h  utility.h
bindings/src/: Evaluation.cpp  Instance.cpp  Labeling.cpp  LocalSearch.cpp  Operators.cpp  Solution.cpp  bindings.cpp  large_neighborhood.cpp  utility.cpp
bindings/src/specializations/: ADPTW.cpp  NIFTW.cpp
bindings/stubs/: _adptw.pyi  _alns.pyi  _alns_operators.pyi  _arc.pyi  _evaluation.pyi  _frvcp.pyi  _insertion_cache.pyi  _instance.pyi  _local_search.pyi  _niftw.pyi  _node.pyi  _node_location.pyi  _random.pyi  _removal_cache.pyi  _route.pyi  _solution.pyi  _types.pyi  _vertex.pyi
docs/source/: adptw.rst  alns.rst  alternatives.rst  auxilliary.rst  conf.py  contributing.rst  custom_operators.rst  custom_problem_settings.rst  development.rst  evaluation.rst  evrptw_bindings.rst  examples.rst  extension.rst  frvcp.rst  full_api.rst  getting_started.rst  index.rst  instance.rst  localsearch.rst  metaheuristic_components.rst  niftw.rst  references.bib  routingblocks.rst  solution.rst
examples/: README.md
examples/alns/: __main__.py  alns.py  parsing.py
examples/evrptw/: README.md  __main__.py  alns.py  config.json  parameters.py  requirements.txt
examples/evrptw/instance/: __init__.py  interface.py  models.py  parsing.py
examples/evrptw/instances/evrptw/: README.txt
examples/evrptw/operators/: ShawMoveSelector.py  ShawRelatedness.py  SpatioTemporalRelatedness.py  __init__.py
examples/evrptw/utility/: __init__.py  algorithms.py
examples/ils/: __main__.py  ils.py  parsing.py
examples/native/: CMakeLists.txt  README.md  usage.py
examples/native/src/: CVRPEvaluation.cpp
native/: CMakeLists.txt
native/include/routingblocks/: ADPTWEvaluation.h  FRVCP.h  Instance.h  LocalSearch.h  NIFTWEvaluation.h  Solution.h  adaptive_large_neighborhood.hpp  arc.h  evaluation.h  insertion_cache.h  lns_operators.h  node.h  operators.h  removal_cache.h  types.h  vertex.h
native/include/routingblocks/operators/: InsertStationOperator.h  InterRouteTwoOptOperator.h  RemoveStationOperator.h  SwapOperator.h
native/include/routingblocks/utility/: adaptive_priority_list.h  algorithms.h  arc_set.h  heap.h  iterator_pair.h  random.h
native/include/vrpis/: ADPTWEvaluation.h  FRVCP.h  Instance.h  LocalSearch.h  NIFTWEvaluation.h  Solution.h  adaptive_large_neighborhood.hpp  arc.h  evaluation.h  insertion_cache.h  lns_operators.h  node.h  operators.h  removal_cache.h  types.h
native/include/vrpis/interfaces/: evaluation.h  node.h  vertex.h
native/include/vrpis/operators/: InsertStationOperator.h  InterRouteTwoOptOperator.h  RemoveStationOperator.h  SwapOperator.h
native/include/vrpis/utility/: adaptive_priority_list.h  algorithms.h  arc_set.h  insertion_cache.h  iterator_pair.h  random.h  removal_cache.h
native/lib/: CMakeLists.txt
native/lib/dynamic_bitset/: CMakeLists.txt
native/lib/sfmt/: CMakeLists.txt
native/lib/sfmt/sfmt/: SFMT.h
native/lib/small_vector/: CMakeLists.txt  LICENSE.txt
native/lib/small_vector/small_vector/: small_vector.hpp
native/lib/xoshiro/: CMakeLists.txt
native/lib/xoshiro/xoshiro/: xoshiro.h
native/src/: ADPTWEvaluation.cpp  FRVCP.cpp  Instance.cpp  LocalSearch.cpp  NIFTWEvaluation.cpp  Solution.cpp  adaptive_large_neighborbood.cpp  lns_operators.cpp  node.cpp
native/src/operators/: InsertStationOperator.cpp  InterRouteTwoOptOperator.cpp
native/test/: CMakeLists.txt
native/test/src/: dummy.cpp
routingblocks/: __init__.py  large_neighborhood.py
routingblocks/adptw/: __init__.py
routingblocks/niftw/: __init__.py
routingblocks/operators/: __init__.py  best_insert.py  cluster_removal.py  move_selectors.py  related_removal.py  route_removal.py  station_vicinity_removal.py  worst_removal.py
routingblocks/utility/: __init__.py  instance_builder.py
test/tests/: conftest.py  test_evaluation.py  test_frvcp.py  test_insertion_cache.py  test_instance.py  test_instance_builder.py  test_large_neighborhood.py  test_lns_helpers.py  test_local_search.py  test_move_selectors.py  test_node.py  test_removal_cache.py  test_route.py  test_solution.py
test/tests/benchmarks/: __init__.py  test_benchmark_frvcp.py  test_benchmark_local_search.py  test_benchmark_removal_cache.py  test_benchmark_route_update.py
test/tests/benchmarks/reference/: insertion_cache.py  removal_cache.py
test/tests/fixtures/: __init__.py  mock_evaluation.py
test/tests/helpers/: __init__.py  interface.py  models.py  parsing.py
test/tests/operators/: test_cluster_removal.py  test_random_insertion.py  test_random_removal.py  test_related_removal.py  test_related_remove.py  test_station_insertion.py  test_station_removal.py  test_station_vicinity_removal.py  test_swap.py
