[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11", "mypy"]
build-backend = "scikit_build_core.build"


[project]
name = "RoutingBlocks"
version = "0.1.0"
description = "A package for the implementation of vehicle routing problems with intermediate stops"
readme = "README.md"
authors = [
    { name = "Patrick Sean Klein", email = "patrick.sean.klein@tum.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark", "pydantic"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.pytest.ini_options]
testpaths = [
    "test/tests/",
]

[tool.cibuildwheel]
test-command = "pytest {project}/test/tests -m 'not benchmark'"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build = ["*x86_64", "*win_amd64","*win32"]
build-verbosity = 1
