[build-system]
requires = ["scikit-build-core>=0.2.1"]
build-backend = "scikit_build_core.build"


[project]
name = "RoutingBlocks"
version = "0.1.9"
description = "A package for the implementation of vehicle routing problems with intermediate stops"
readme = "README.md"
authors = [
    { name = "Patrick Sean Klein", email = "patrick.sean.klein@tum.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark", "pytest-randomly", "pydantic"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinx-autoapi", "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid"]
examples = ["click", "pydantic"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.minimum-version = "3.18.0"

[tool.pytest.ini_options]
testpaths = [
    "test/tests/",
]

[tool.cibuildwheel]
test-command = [
    'python -m pytest {project}/test/tests -m "not benchmark" --randomly-dont-reorganize',
    'cd {project}/examples && python -m ils -n 10 evrptw/instances/evrptw/100/c101_21.txt',
    'cd {project}/examples && python -m alns -n 10 evrptw/instances/evrptw/100/c101_21.txt',
    'cd {project}/examples && python -m evrptw --time-limit 120 --config-path evrptw/config.json evrptw/instances/evrptw/100/c101_21.txt',
]
test-extras = ["test", "examples"]
test-skip = ["*universal2:arm64"]
build = ["cp*-manylinux_x86_64", "cp*-win32", "cp*-win_amd64", "cp*-macosx_*"]
build-verbosity = 3

[[tool.cibuildwheel.overrides]]
select = '*-win*'
test-command = [
    'python -m pytest {project}/test/tests -m "not benchmark" --randomly-dont-reorganize'
]
