cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

project(SMALL_VECTOR VERSION 1.0 LANGUAGES CXX)


add_library(SMALL_VECTOR INTERFACE)
target_include_directories(SMALL_VECTOR INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/small_vector DESTINATION routingblocks/include)
